# pw-2325-backend-i

1.20-03-2024/: two_sum.py
2.21-03-2024/: circle.py  rectangle.py
Projeto_Final/appcalendar/: manage.py  pyproject.toml
Projeto_Final/appcalendar/appcalendar/: asgi.py  settings.py  urls.py  wsgi.py
Projeto_Final/appcalendar/cal/: forms.py  models.py  urls.py  views.py
Projeto_Final/appcalendar/cal/migrations/: 0001_initial.py
aula10/: Dockerfile  docker-compose.yaml  pyproject.toml
aula10/api/: main.py
aula11/: Dockerfile  docker-compose.yaml  pyproject.toml
aula11/api/routes/: products.py
aula12/: Dockerfile  pyproject.toml
aula12/api/: main.py
aula12/api/routes/: products.py
aula13/: Dockerfile  README.md  pyproject.toml
aula13/api/: clients.py
aula13/api/routes/: products.py
aula3/: sleeper.py  test_ce.py
aula3/circle/: test_circle.py
aula3/rectangle/: rectangle.py  test_rectangle.py
aula4/: Makefile  README.md  cli.py  hello.py  pyproject.toml
aula4/bucket_list/: main.py
aula5/bucket_list/: COMPRAS.txt  pyproject.toml  run.py  test_cli.py
aula6/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
aula6/eticbot/: app.py  bot.py
aula7/: Makefile  docker-compose.yaml  pyproject.toml
aula7/eticgpt/: bot.py  client.py  models.py  run.py
aula8/: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
aula8/eticgpt/: bot.py  client.py  models.py  run.py
aula9/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
aula9/eticgpt/: bot.py  client.py  decorator.py  models.py  run.py
(+1 files in other folders)
