[tool.poetry]
name = "bot etic"
version = "0.1.0"
description = "Bot ping pong"
authors = ["LuisBBandeira <luisfilipebentobandeira@gmail.com>"]
license = "MIT"
readme = "README.md"
packages =[
    {include = "eticbot/*.py}
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
py-cord = "^2.5.0"

[tool.poetry.dev-dependencies]
python = "^3.10"
click = "^8.1.7"
py-cord = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
